# filters

./: CMakeLists.txt  README.md  UKF_Tracker.py  lidar_backproject.py  package.xml  requirements.txt  setup.cfg  setup.py  test_slalom_clustering.ipynb
.github/workflows/: deps.repos  test.yml
bb_filters/: cluster.py  detected_object_3d_filter.py  lidar_detected_object_2d_filter.py  log.py  min_bounding_rect.py  sort_3d.py  tf_lru_cache.py
bb_filters/archive/: detected_object_2d_array_vis.py  detected_object_3d_composite_filter.py  detected_object_3d_filter.py  lidar_backproject_ml.py  lidar_detected_object_2d_filter.py  sort_3d.py
bb_filters/archive/robotx/: robotx_red_green_gate_detection.py  robotx_wildlife_completion.py
bb_filters/clustering/: cluster.py
bb_filters/nodes/: detected_object_3d_labelling.py
bb_filters/nodes/cluster/: cluster_poses_action_node.py  cluster_poses_node.py  cluster_poses_service_node.py  cluster_slalom_tfs.py  cluster_slalom_tfs_node.py  cluster_tf_action.py  cluster_tf_action_server.py  cluster_tf_multi_action.py  cluster_tf_multi_action_server.py  cluster_tf_multi_service_server.py  cluster_tf_service_server.py
bb_filters/utils/: cluster.py  cluster_tf_action_base.py  goal_sync.py  pipeline.py  pose.py  spike.py  tf_lookup_node.py  tf_lru_cache.py
bb_filters/utils/cluster/: cluster.py
config/sauvc_objects/: ball.yaml  buckets.yaml  gate.yaml  yellow_flare.yaml
launch/: asv4_filters.launch.py  asv4_filters_sim.launch.py  asv4_obstacles_tf.launch.py  auv4_filters.launch.py  sauvc.launch  uav2_filters.launch.py  uav2_filters_sim.launch.py
scripts/: UKF_Tracker.py  centroid_tf_publisher.py  cluster_detected_objects_3d.py  cluster_poses_node.py  cluster_slalom_tfs.py  cluster_slalom_tfs_node.py  cluster_tf_action.py  cluster_tf_action_server.py  cluster_tf_action_server_fallback.py  cluster_tf_multi_action_server.py  cluster_tf_multi_service_server.py  cluster_tf_service_server.py  detected_object_2d_array_vis.py  detected_object_2d_filter_projection.py  detected_object_2d_filter_projection_bottom_facing.py  detected_object_3d_array_vis.py  detected_object_3d_filter.py  detected_object_3d_labelling.py  detected_objects_debug.py  lidar_bbox_extractor.py  lidar_detected_object_2d_filter.py  ml_color_relabel_node.py  obstacles_management_server.py  pinger_gate_detection.py  placard_pose_estimator.py  robotx_ftp_start_detector.py  robotx_gate_detection.py  robotx_light_tower_detection.py  robotx_placard_detection.py  robotx_prequali_gate_detection.py  robotx_red_green_gate_detection.py  robotx_sim_obstacles_converter.py  robotx_wildlife.py  robotx_wildlife_completion.py  robotx_wildlife_detection.py  sauvc_detections_filter.py  test_find_wildlife.py  zed_detector.py  zed_tracker.py
scripts/archive/: detect_red_buoy.py
scripts/archive/robotx/: robotx_gate_detection.py
scripts/cluster/: cluster_poses_action_node.py  cluster_poses_node.py  cluster_poses_service_node.py  cluster_slalom_tfs.py  cluster_slalom_tfs_node.py  cluster_tf_action.py  cluster_tf_action_server.py  cluster_tf_multi_action.py  cluster_tf_multi_action_server.py  cluster_tf_multi_service_server.py  cluster_tf_service_server.py
scripts/robosub25/: multi_cluster_action_server.py  slalom_cluster_action_server.py
scripts/robotx/: pinger_gate_detection.py  test_find_wildlife.py  zed_detector.py
scripts/utils/: tf_lookup_node.py
src/: UKF_Tracker.py  detected_object_2d_vis.cpp  detected_object_3d_labelling.cpp  detected_object_3d_vis.cpp  lidar_backproject.py  sort_3d.py
src/bb_filters/: filter.py  utils.py
src/bb_filters/sauvc_objects/: ball.py  blue_flare.py  buckets.py  gate.py  oldbuckets.py  orange_flare.py  qualification_gate.py  red_flare.py  yellow_flare.py
test/: cluster_test_utils.py  conftest.py  test_cluster_poses_action.py  test_cluster_poses_service.py
urdf/: obstacles.urdf.xacro
