<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bb_filters</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bumblebeeauv@gmail.com">islabella</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>ament_index_cpp</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

  <depend>bb_perception_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <!-- Use the pip-installed version instead of the system version -->
  <!-- Ubuntu 22.04 uses python3-transforms3d version 0.3.1 -->
  <!-- This has a `numpy.float` bug which is incompatible with numpy 1.24+ -->
  <!-- This is fixed in Ubuntu 24.04 which uses python3-transforms3d version 0.4.1 -->
  <exec_depend>python-transforms3d-pip</exec_depend>

  <exec_depend>bb_robosub_msgs</exec_depend>
  <exec_depend>frames</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
